[tool.poetry]
name = "chacha-chatbot"
version = "0.2.0"
description = ""
authors = ["Young-Ho Kim", "Woosuk Seo"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.99.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
openai = "^0.27.8"
nanoid = "^2.0.0"
python-dotenv = "^1.0.0"
pendulum = "^2.1.2"
jsonlines = "^3.1.0"
chatlib = {git = "https://github.com/yghokim/chatlib.git", tag="0.6.7"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
